# ACM

./: CMakeLists.txt  README.md
include/: Sentinel.h
src/: ConfigType.h  ConfigurationManager.cpp  ConfigurationManager.h  FileReader.cpp  FileReader.h  FileReaderTypes.h  SentinelFileReader.cpp  SentinelFileReader.h
